WindGroup Dev/src/objects/Team_Member__c.object
<CustomObject>
    <description>This is the team member for team.</description>
    <fields>
        <fullName>In_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Property__c</fullName>
        <formula>Team__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Action_Taker__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM{000000}</displayFormat>
        <label>Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>